# OSIDE

./: .gitignore  MasterSpecDoc.md  README.md
backend/: CMakeLists.txt  package.json
backend/include/citadel/: Application.hpp
backend/include/citadel/compiler/: BuildDriver.hpp
backend/include/citadel/debug/: DebuggerSession.hpp
backend/include/citadel/protocol/: MessageRouter.hpp  RegisterHandlers.hpp  WebSocketServer.hpp
backend/include/citadel/workspace/: ProjectMetadataLoader.hpp
backend/src/compiler/: BuildDriver.cpp
backend/src/debug/: DebuggerSession.cpp
backend/src/main/: Application.cpp  main.cpp
backend/src/protocol/handlers/: RegisterHandlers.cpp
backend/src/protocol/router/: MessageRouter.cpp
backend/src/protocol/server/: WebSocketServer.cpp
backend/src/workspace/: ProjectMetadataLoader.cpp
docs/: README.md
docs/architecture/: LookAheadDebugger.md  README.md  SandboxValueInjection.md  TracebackAnalysis.md
docs/master-spec/: README.md
docs/roadmap/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/app/: AppProviders.tsx  AppShell.tsx
protocol/: README.md  package-lock.json  package.json  tsconfig.json
protocol/schemas/: index.ts
protocol/schemas/commands/: build.ts  debug.ts  project.ts
protocol/schemas/common/: envelope.ts  error.ts  (+2 more)
samples/tinyos/: README.md  linker.ld  project.json
scripts/: build.sh  check-conformance.sh  clean.sh  dev.sh  format.sh  run.sh  setup-dev.sh  validate.sh
templates/os-project/: README.md  project.json
tools/elf-dump/: README.md
(+23 files in other folders)
